[tool.poetry]
package-mode = false
authors = ["Philipp Hansch <dev@phansch.net>"]
readme = "README.md"
packages = [{include = "dotfiles"}]

[tool.poetry.dependencies]
python = "^3.12"
ansible = "9.5.1"
molecule = "^24.2.1"
vim-vint = "0.3.21"
ansible-lint = { version = "24.5.0", markers = 'platform_system != "Windows"' }
molecule-plugins = { extras = ["docker"], version = "^23.5.3" }
pytest-testinfra = "^10.1.0"
setuptools = "^71.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
