[tool.poetry]
package-mode = false
authors = ["Philipp Hansch <dev@phansch.net>"]
readme = "README.md"
packages = [{include = "dotfiles"}]

[tool.poetry.dependencies]
python = "^3.13"
ansible = "11.2.0"
molecule = "^24.9.0"
vim-vint = "0.3.21"
ansible-lint = { version = "25.2.0", markers = 'platform_system != "Windows"' }
molecule-plugins = { extras = ["docker"], version = "^23.6.0" }
pytest-testinfra = "^10.1.1"
setuptools = "^75.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
